[fix #] : Align main menu properly

--- a/static/css/main_css.css
+++ b/static/css/main_css.css
@@ -84,7 +84,7 @@ a:hover, a:active {
     list-style-type: none;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    width: 99%;
+    width: 90%;
     margin: auto;
 }
 
